WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301882
AX: AXTableHelpers::isDataTableWithTraversal scopes CheckedPtrs longer than needed which can cause crashes
https://bugs.webkit.org/show_bug.cgi?id=301882
Summary
AX: AXTableHelpers::isDataTableWithTraversal scopes CheckedPtrs longer than n...
Tyler Wilcock
Reported
2025-11-03 12:20:40 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-03 12:20:46 PST
<
rdar://problem/163956273
>
Tyler Wilcock
Comment 2
2025-11-03 12:23:29 PST
rdar://163473516
Tyler Wilcock
Comment 3
2025-11-03 12:30:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53353
EWS
Comment 4
2025-11-03 17:48:55 PST
Committed
302508@main
(90caf1ba530f): <
https://commits.webkit.org/302508@main
> Reviewed commits have been landed. Closing PR #53353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug