AX: AXTableHelpers::isDataTableWithTraversal scopes CheckedPtrs longer than needed which can cause crashes https://bugs.webkit.org/show_bug.cgi?id=301882 rdar://163473516

Reviewed by Joshua Hoffman.

If the style is destroyed by the end of this function, the CheckedPtr will cause a (safe) crash. Fix this by only scoping
the CheckedPtr for when we actually need it.

* Source/WebCore/accessibility/AXTableHelpers.cpp:
(WebCore::AXTableHelpers::isDataTableWithTraversal):

Canonical link: https://commits.webkit.org/302508@main